[project]
name = "pubtrends-datasets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "aiosqlite>=0.22.1",
    "coverage==7.11.0",
    "dacite==1.8.1",
    "flasgger==0.9.7.1",
    "flask==3.1.2",
    "geoparse==2.0.4",
    "parameterized==0.9.0",
    "pip==25.3",
    "pytest==9.0.2",
    "requests==2.32.5",
]
