[project]
name = "pubtrends-datasets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aiogzip>=1.1.0",
    "aiohttp>=3.13.2",
    "aiosqlite>=0.22.1",
    "coverage==7.11.0",
    "dacite==1.8.1",
    "flasgger==0.9.7.1",
    "flask==3.1.2",
    "flask-migrate>=4.1.0",
    "geoparse==2.0.4",
    "pandas-stubs==2.3.3.251219",
    "parameterized==0.9.0",
    "pip==25.3",
    "requests==2.32.5",
    "sqlacodegen>=3.2.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]
